tests/reflect_span_removed_bad.hop
// Verifies the removed reflect package is not public.
import "reflect"
